feat: standardize report terminology and ensure PDF completeness for all inconsistencies

--- a/templates/auditoria_tool.html
+++ b/templates/auditoria_tool.html
@@ -241,7 +241,7 @@
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase">Predial
                                         </th>
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase text-right">
-                                            Avalúo</th>
+                                            Avaluo Cierre</th>
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase text-right">
                                             % Var</th>
                                     </tr>
@@ -275,7 +275,7 @@
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase">Predial
                                         </th>
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase text-right">
-                                            Avalúo</th>
+                                            Avaluo Cierre</th>
                                         <th class="py-2 px-2 text-[10px] font-bold text-gray-500 uppercase text-right">
                                             % Var</th>
                                     </tr>
@@ -322,9 +322,9 @@
                                 <tr>
                                     <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Número predial</th>
                                     <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Zona</th>
-                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Precierre</th>
-                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Cierre Lista</th>
-                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Cierre Calc</th>
+                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Avaluo Precierre</th>
+                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Avaluo Cierre</th>
+                                    <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Avaluo Cierre Calc</th>
                                     <th class="px-4 py-3 cursor-pointer hover:bg-gray-100">Estado</th>
                                 </tr>
                             </thead>
